# backupd

./: Dockerfile  LICENSE  Makefile  README.md  backupd.cabal  log-config.json  pyproject.toml  test.toml
app/: Main.hs
configs/: gdrive.storage  local.storage  test.storage  test.toml
example-config/: gdrive.storage  local.storage  test.entry  test.toml
src/backupd/: __init__.py  backup.py  config.py  docker.py  metrics.py  repository.py  restic.py  settings.py  source.py  task_queue.py
src/backupd/api/: backup.py  list.py  remove.py  restore.py
src/backupd/config/: __init__.py  entry.py  repo.py  source.py
src/backupd/config/repo/: __init__.py  local.py  rclone.py
src/backupd/docker/: interface.py  models.py
src/backupd/restic/: backup.py  commands.py  common.py  error.py  flags.py  models.py  repository.py  restore.py  snapshots.py
src/backupd/restic/commands/: backup.py  snapshots.py
src/backupd/schedule/: backup.py  jobs.py
