[project]
name = "backupd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiodocker>=0.24.0",
    "fastapi[standard]>=0.115.12",
    "prometheus-client>=0.21.1",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
]

[project.scripts]
backupd = "backupd:main"
